tests/build/widget/invalid_inherited_capture_override.stderr
error: inherited property `foo` is captured in inherited fn `new_child` from `super::base1_widget`, but the property is then overwritten in `super::base2_mixin`
a new `new_child` must be declared to resolve this conflict.
  --> $DIR/invalid_inherited_capture_override.rs:35:21
   |
35 |     inherit!(super::base2_mixin);
   |                     ^^^^^^^^^^^

error: inherited property `bar` is captured in inherited fn `new` from `super::base1_widget`, but the property is then overwritten in `super::base2_mixin`
a new `new` must be declared to resolve this conflict.
  --> $DIR/invalid_inherited_capture_override.rs:35:21
   |
35 |     inherit!(super::base2_mixin);
   |                     ^^^^^^^^^^^
